v3.0.4 - YYYY-MMM-DD (to be released)
-------------------------------------

 - Fix: ModSecurity 3.x inspectFile operator does not pass
   FILES_TMPNAMES parameter to lua engine
   [Issue #2204, #2205 - @kadirerdogan]
 - XML: Remove error messages from stderr
   [Issue #2010 - @JaiHarpalani, @zimmerle]
 - Filter comment or blank line for pmFromFile operator
   [Issue #1645 - @LeeShan87, @victorhora, @tdoubley]
 - Additional adjustment to Cookie header parsing
   [@martinhsv]
 - Restore chained rule part H logging to be more like 2.9 behaviour
   [Issue #2196 - @martinhsv]
 - Small fixes in log messages to help debugging the file upload
   [Issue #2130 - @airween]
 - Fix Cookie header parsing issues
   [Issue #2201 - @airween, @martinhsv]
 - Fix rules with nolog are logging to part H
   [Issue #2196 - @martinhsv]
 - Fix argument key-value pair parsing cases
   [Issue #1904 - @martinhsv]
 - Fix: audit log part for response body for JSON format to be E
   [Issue #2066 - @martinhsv, @zimmerle]
 - Make sure m_rulesMessages is filled after successfull match
   [Issue #2000, #2048 - @victorhora, @defanator]
 - Fix @pm lookup for possible matches on offset zero.
   [@zimmerle, @afoxdavidi, @martinhsv, @marshal09]
 - Regex lookup on the key name instead of COLLECTION:key
   [@rdiperri-yottaa, @danbiagini-work, @mmelo-yottaa, @zimmerle]
 - Missing throw in Operator::instantiate
   [Issue #2106 - @marduone]
 - Making block action execution dependent of the SecEngine status
   [Issue #2113, #2111 - @theMiddleBlue, @airween]
 - Making block action execution dependent of the SecEngine status
   [Issue #1960 - @theMiddleBlue, @zimmerle, @airween, @victorhora]
 - Having body limits to respect the rule engine state
   [@zimmerle]
 - Fix SecRuleUpdateTargetById does not match regular expressions
   [Issue #1872 - @zimmerle, @anush-cr, @victorhora, @j0k2r]  
 - Adds missing check for runtime ctl:ruleRemoveByTag
   [Issue #2102, #2099 - @airween]